tests/NormalTests/paczka1/fuzzy1/93521975.err
Error in line 9: S891 S891 97,3
Error in line 22: xwxf1Gzmukt A471 40,8
Error in line 23: xwxf1Gzmukt S77 15,8
